--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=4000
-CLIENT_URL=https://phongtrot03.vercel.app/
+CLIENT_URL=https://phongtrot03.vercel.app
 SECRET_KEY=fajfhkahfkajhfka
 SECRET_GENERATE= phongtro123
 LIMIT=5
