--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
 PORT=4000
-CLIENT_URL=https://phongtrot03.vercel.app
+# CLIENT_URL=https://phongtrot03.vercel.app
+# http://localhost:3000
+CLIENT_URL=https://phongtro10.vercel.app/
 SECRET_KEY=fajfhkahfkajhfka
 SECRET_GENERATE= phongtro123
 LIMIT=5
-DB_HOST=dpg-cilsl56nqqlfm4d72jl0-a.singapore-postgres.render.com
-DB_NAME=db_phongtro123_nmkw
-DB_USERNAME=db_phongtro123_nmkw_user
-DB_PASSWORD=wqhfndSGaHJmRJY9SBgo4BZyrsfq75lM
-DB_DIALECT=postgres
-NODE_ENV=development
+ DB_HOST=dpg-cilsl56nqqlfm4d72jl0-a.singapore-postgres.render.com
+ DB_NAME=db_phongtro123_nmkw
+ DB_USERNAME=db_phongtro123_nmkw_user
+ DB_PASSWORD=wqhfndSGaHJmRJY9SBgo4BZyrsfq75lM
+ DB_DIALECT=postgres
+ NODE_ENV=development
