--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,30 +1,34 @@
 
-
 {
       "development": {
-        "username": "root",
-        "password": "trungbqph09417",
-        "database": "thuephongtro123",
-        "host": "127.0.0.1",
-        "dialect": "mysql",
-        "logging":false
-      },
-      "test": {
-        "username": "root",
-        "password": null,
-        "database": "database_test",
-        "host": "127.0.0.1",
-        "dialect": "mysql"
+        "username": "db_phongtro123_nmkw_user",
+        "password": "wqhfndSGaHJmRJY9SBgo4BZyrsfq75lM",
+        "database": "db_phongtro123_nmkw",
+        "host": "dpg-cilsl56nqqlfm4d72jl0-a.singapore-postgres.render.com",
+        "dialect": "postgres",
+        "logging":false,
+        "dialectOptions":{
+          "ssl":{
+            "require":true,
+            "rejectUnauthorized":false
+          }
+        }
       },
       "production": {
-        "username": "root",
-        "password": null,
-        "database": "database_production",
-        "host": "127.0.0.1",
-        "dialect": "mysql"
+        "username": "db_phongtro123_nmkw_user",
+        "password": "wqhfndSGaHJmRJY9SBgo4BZyrsfq75lM",
+        "database": "db_phongtro123_nmkw",
+        "host": "dpg-cilsl56nqqlfm4d72jl0-a.singapore-postgres.render.com",
+        "dialect": "postgres",
+        "logging":false,
+        "dialectOptions":{
+          "ssl":{
+            "require":true,
+            "rejectUnauthorized":false
+          }
+        }
       }
     }
-
 
 
 
